--- a/src/index.css
+++ b/src/index.css
@@ -24,20 +24,36 @@ html, body {
   font-family: var(--fontFamily);
 }
 
+.Container {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .Cell {
   --scale: 6;
-  height: calc(var(--scale) * 1rem);
-  width: calc(var(--scale) * 1rem);
-  line-height: calc(var(--scale) * 1rem);
+  height: calc(90vmin / 5);
+  width: calc((90vmin / 5) - .4rem);
+  line-height: calc(90vmin / 5);
   text-align: center;
   border-radius: 1em;
   color: var(--primary);
   background: var(--white);
   font-size: calc(var(--scale) * .25rem);
 }
+.Block {
+  padding: .2rem;
+}
 
 .Board {
   width: 90vmin;
   height: 90vmin;
   margin: 5vmin;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
